--- a/web/package.json
+++ b/web/package.json
@@ -46,6 +46,7 @@
     "@types/lodash": "^4.14.202",
     "@types/nprogress": "^0.2.3",
     "@types/qrcode": "^1.5.5",
+    "@vitejs/plugin-basic-ssl": "^1.1.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vueuse/components": "^10.9.0",
     "@vueuse/core": "^10.8.0",
