--- a/web/package.json
+++ b/web/package.json
@@ -32,6 +32,7 @@
     "qrcode": "^1.5.3",
     "sass": "^1.71.1",
     "vue": "^3.4.19",
+    "vue-hooks-plus": "^1.8.9",
     "vue-i18n": "^9.9.1",
     "vue-router": "^4.3.0",
     "vue-tsc": "^2.0.6",
