--- a/web/.env.sit
+++ b/web/.env.sit
@@ -5,10 +5,10 @@ ENV = sit
 VITE_APP_TITLE = 后台系统
 
 #api地址
-VITE_APP_BASE_API = http://106.4.82.135:8088
+VITE_APP_BASE_API = http://106.4.82.135:8080
 
 #文件服务器地址
-VITE_APP_FILE_API = http://106.4.82.135:8088/files
+VITE_APP_FILE_API = http://106.4.82.135:8081
 
 #web跳转的URL
 VITE_APP_WEB_URL = http://106.4.82.135:80 
