--- a/file/booting/pom.xml
+++ b/file/booting/pom.xml
@@ -5,7 +5,7 @@
     <!--  继承父类  -->
     <parent>
         <groupId>com.example</groupId>
-        <artifactId>server</artifactId>
+        <artifactId>file</artifactId>
         <version>2.7.12</version>
     </parent>
 
@@ -27,7 +27,7 @@
 
         <dependency>
             <groupId>com.example</groupId>
-            <artifactId>system</artifactId>
+            <artifactId>files</artifactId>
         </dependency>
     </dependencies>
 
