--- a/web/.env.dev
+++ b/web/.env.dev
@@ -5,10 +5,10 @@ ENV = dev
 VITE_APP_TITLE = 后台系统
 
 #api地址
-VITE_APP_BASE_API = http://localhost:8088
+VITE_APP_BASE_API = http://localhost:8080
 
 #文件服务器地址
-VITE_APP_FILE_API = http://localhost:8088/files
+VITE_APP_FILE_API = http://localhost:8081
 
 #web跳转的URL
 VITE_APP_WEB_URL = http://localhost:80 
