--- a/web/.env.prod
+++ b/web/.env.prod
@@ -5,10 +5,10 @@ ENV = prod
 VITE_APP_TITLE = 后台系统
 
 #api地址
-VITE_APP_BASE_API = http://1.12.248.138:8088
+VITE_APP_BASE_API = http://1.12.248.138:8080
 
 #文件服务器地址
-VITE_APP_FILE_API = http://1.12.248.138:8088/files
+VITE_APP_FILE_API = http://1.12.248.138:8081
 
 #web跳转的URL
 VITE_APP_WEB_URL = http://1.12.248.138:80
