--- a/web/.env.prod
+++ b/web/.env.prod
@@ -10,6 +10,9 @@ VITE_APP_BASE_API = http://1.12.248.138:8080
 #文件服务器地址
 VITE_APP_FILE_API = http://1.12.248.138:8081
 
+#文件访问地址
+VITE_APP_FILE_URL = http://192.168.1.101:8081
+
 #web跳转的URL
 VITE_APP_WEB_URL = http://1.12.248.138:80
 
