--- a/web/.env.dev
+++ b/web/.env.dev
@@ -10,6 +10,9 @@ VITE_APP_BASE_API = http://localhost:8080
 #文件服务器地址
 VITE_APP_FILE_API = http://localhost:8081
 
+#文件访问地址
+VITE_APP_FILE_URL = http://localhost:8081
+
 #web跳转的URL
 VITE_APP_WEB_URL = http://localhost:80 
 
