--- a/web/.env.sit
+++ b/web/.env.sit
@@ -5,13 +5,16 @@ ENV = sit
 VITE_APP_TITLE = 后台系统
 
 #api地址
-VITE_APP_BASE_API = http://106.4.82.135:8080
+VITE_APP_BASE_API = http://192.168.1.101:8080
 
 #文件服务器地址
-VITE_APP_FILE_API = http://106.4.82.135:8081
+VITE_APP_FILE_API = http://192.168.1.101:8081
+
+#文件访问地址
+VITE_APP_FILE_URL = http://192.168.1.101:8081
 
 #web跳转的URL
-VITE_APP_WEB_URL = http://106.4.82.135:80 
+VITE_APP_WEB_URL = http://192.168.1.101:80 
 
 # 访问路径
 PUBLIC_PATH = /system
