--- a/web/.env.sit
+++ b/web/.env.sit
@@ -14,7 +14,9 @@ VITE_APP_FILE_API = http://192.168.1.101:8081
 VITE_APP_FILE_URL = http://192.168.1.101:8081
 
 #web跳转的URL
-VITE_APP_WEB_URL = http://192.168.1.101:80 
+VITE_APP_WEB_URL = http://192.168.1.101:80
+
+VITE_APP_WEB_WS = ws://192.168.1.101:8080
 
 # 访问路径
 PUBLIC_PATH = /system
