--- a/web/.env.dev
+++ b/web/.env.dev
@@ -16,5 +16,7 @@ VITE_APP_FILE_URL = http://localhost:8081
 #web跳转的URL
 VITE_APP_WEB_URL = http://localhost:80 
 
+VITE_APP_WEB_WS = ws://localhost:8080
+
 # 访问路径
 PUBLIC_PATH = /system
