--- a/web/.env.prod
+++ b/web/.env.prod
@@ -16,5 +16,7 @@ VITE_APP_FILE_URL = http://192.168.1.101:8081
 #web跳转的URL
 VITE_APP_WEB_URL = http://1.12.248.138:80
 
+VITE_APP_WEB_WS = ws://1.12.248.138:8080
+
 # 访问路径
 PUBLIC_PATH = /system
