--- a/web/package.json
+++ b/web/package.json
@@ -18,10 +18,12 @@
   },
   "dependencies": {
     "@iconify/vue": "^4.1.1",
+    "@vitejs/plugin-vue-jsx": "^4.0.0",
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
     "echarts": "^5.5.0",
     "element-plus": "^2.5.6",
+    "exceljs": "^4.4.0",
     "highlight.js": "^11.9.0",
     "hover.css": "^2.3.2",
     "js-beautify": "^1.15.1",
@@ -36,8 +38,11 @@
     "vue-i18n": "^9.9.1",
     "vue-router": "^4.3.0",
     "vue-tsc": "^2.0.6",
-    "vxe-table": "^4.6.17",
+    "vxe-pc-ui": "v4",
+    "vxe-table": "v4",
+    "vxe-table-plugin-export-xlsx": "^4.0.3",
     "windicss": "^3.5.6",
+    "xe-utils": "^3.5.27",
     "xgplayer": "^3.0.14"
   },
   "devDependencies": {
