--- a/web/.env.sit
+++ b/web/.env.sit
@@ -1,11 +1,14 @@
-# 测试环境配置
+# 开发环境配置
 ENV = sit
 
 # 页面标题
 VITE_APP_TITLE = 后台系统
 
 #api地址
-VITE_APP_BASE_API = http://192.168.1.101:8080
+VITE_APP_BASE_API = http://192.168.1.101:8000
+
+#域名
+VITE_APP_BASE_DOMAIN = http://192.168.1.101
 
 #文件服务器地址
 VITE_APP_FILE_API = http://192.168.1.101:8081
@@ -14,8 +17,12 @@ VITE_APP_FILE_API = http://192.168.1.101:8081
 VITE_APP_FILE_URL = http://192.168.1.101:8081
 
 #web跳转的URL
-VITE_APP_WEB_URL = http://192.168.1.101:80
+VITE_APP_WEB_URL = http://192.168.1.101:8000
 
+#swagger
+VITE_APP_SWAGGER_URL = http://192.168.1.101:8080/doc.html#/default
+
+#ws
 VITE_APP_WEB_WS = ws://192.168.1.101:8080
 
 # 访问路径
