--- a/web/.env.dev
+++ b/web/.env.dev
@@ -5,7 +5,10 @@ ENV = dev
 VITE_APP_TITLE = 后台系统
 
 #api地址
-VITE_APP_BASE_API = http://localhost:8080
+VITE_APP_BASE_API = http://localhost:8000
+
+#域名
+VITE_APP_BASE_DOMAIN = http://localhost
 
 #文件服务器地址
 VITE_APP_FILE_API = http://localhost:8081
@@ -14,8 +17,12 @@ VITE_APP_FILE_API = http://localhost:8081
 VITE_APP_FILE_URL = http://localhost:8081
 
 #web跳转的URL
-VITE_APP_WEB_URL = http://localhost:80 
+VITE_APP_WEB_URL = http://localhost:8000
 
+#swagger
+VITE_APP_SWAGGER_URL = http://localhost:8080/doc.html#/default
+
+#ws
 VITE_APP_WEB_WS = ws://localhost:8080
 
 # 访问路径
