--- a/web/.env.prod
+++ b/web/.env.prod
@@ -5,17 +5,24 @@ ENV = prod
 VITE_APP_TITLE = 后台系统
 
 #api地址
-VITE_APP_BASE_API = http://1.12.248.138:8080
+VITE_APP_BASE_API = http://1.12.248.138:8000
+
+#域名
+VITE_APP_BASE_DOMAIN = http://1.12.248.138
 
 #文件服务器地址
 VITE_APP_FILE_API = http://1.12.248.138:8081
 
 #文件访问地址
-VITE_APP_FILE_URL = http://192.168.1.101:8081
+VITE_APP_FILE_URL = http://1.12.248.138:8081
 
 #web跳转的URL
-VITE_APP_WEB_URL = http://1.12.248.138:80
+VITE_APP_WEB_URL = http://1.12.248.138:8000
 
+#swagger
+VITE_APP_SWAGGER_URL = http://1.12.248.138:8080/doc.html#/default
+
+#ws
 VITE_APP_WEB_WS = ws://1.12.248.138:8080
 
 # 访问路径
