--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,9 @@
   },
   "dependencies": {
     "@vitejs/plugin-vue-jsx": "^4.0.0",
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-vue": "^5.1.12",
+    "animate.css": "^4.1.1",
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
     "echarts": "^5.5.0",
