--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,8 @@
     "dev:app-android": "uni -p app-android",
     "dev:app-ios": "uni -p app-ios",
     "dev:custom": "uni -p",
-    "dev:h5": "uni",
+    "dev:h5": "uni --mode dev",
+    "prod:h5": "uni --mode prod",
     "dev:h5:ssr": "uni --ssr",
     "sh:dev": "bash ./build/build.sh",
     "dev:mp-alipay": "uni -p mp-alipay",
@@ -17,6 +18,7 @@
     "dev:mp-qq": "uni -p mp-qq",
     "dev:mp-toutiao": "uni -p mp-toutiao",
     "dev:mp-weixin": "uni -p mp-weixin",
+    "prod:mp-weixin": "uni -p mp-weixin --mode prod",
     "dev:quickapp-webview": "uni -p quickapp-webview",
     "dev:quickapp-webview-huawei": "uni -p quickapp-webview-huawei",
     "dev:quickapp-webview-union": "uni -p quickapp-webview-union",
@@ -56,6 +58,7 @@
     "@dcloudio/uni-ui": "^1.4.28",
     "clipboard": "^2.0.11",
     "dayjs": "^1.11.10",
+    "lodash": "^4.17.21",
     "pinia": "2.0.33",
     "uview-plus": "^3.1.38",
     "vue": "^3.2.45",
@@ -73,6 +76,7 @@
     "sass": "^1.69.4",
     "sass-loader": "10.1.1",
     "typescript": "^4.9.4",
+    "unplugin-auto-import": "^0.17.6",
     "vite": "4.1.4",
     "vue-tsc": "^1.0.24"
   }
