--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,9 @@
   },
   "dependencies": {
     "@vitejs/plugin-vue-jsx": "^4.0.0",
+    "@vxe-ui/plugin-export-pdf": "4.0.2",
+    "@vxe-ui/plugin-export-xlsx": "4.0.2",
+    "@vxe-ui/plugin-render-element": "4.0.5",
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^5.1.12",
     "animate.css": "^4.1.1",
@@ -30,7 +33,9 @@
     "hover.css": "^2.3.2",
     "js-beautify": "^1.15.1",
     "js-cookie": "^3.0.5",
+    "jspdf": "2.5.1",
     "lodash": "^4.17.21",
+    "md-editor-v3": "^4.17.3",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "qrcode": "^1.5.3",
@@ -40,9 +45,8 @@
     "vue-i18n": "^9.9.1",
     "vue-router": "^4.3.0",
     "vue-tsc": "^2.0.6",
-    "vxe-pc-ui": "v4",
-    "vxe-table": "v4",
-    "vxe-table-plugin-export-xlsx": "^4.0.3",
+    "vxe-pc-ui": "^4.0.59",
+    "vxe-table": "^4.7.47",
     "windicss": "^3.5.6",
     "xe-utils": "^3.5.27",
     "xgplayer": "^3.0.14"
