--- a/web/package.json
+++ b/web/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "dev": "vite --mode dev",
     "sit": "vite --mode sit",
+    "uat": "vite --mode uat",
     "prod": "vite --mode prod",
     "sh:prod": "bash ./build/build.sh prod prod",
     "build:dev": "vue-tsc && vite build --mode dev",
     "build:sit": "vue-tsc && vite build --mode sit",
+    "build:uat": "vue-tsc && vite build --mode uat",
     "build:prod": "vue-tsc && vite build --mode prod",
     "preview": "vite preview",
     "docs:dev": "vitepress dev docs",
@@ -17,6 +19,7 @@
     "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
+    "@vavt/md-editor-extension": "^3.0.0",
     "@vitejs/plugin-vue-jsx": "^4.0.0",
     "@vxe-ui/plugin-export-pdf": "4.0.2",
     "@vxe-ui/plugin-export-xlsx": "4.0.2",
@@ -58,7 +61,6 @@
     "@types/lodash": "^4.14.202",
     "@types/nprogress": "^0.2.3",
     "@types/qrcode": "^1.5.5",
-    "@vitejs/plugin-basic-ssl": "^1.1.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vueuse/components": "^10.9.0",
     "@vueuse/core": "^10.8.0",
@@ -70,7 +72,6 @@
     "vite": "^5.1.4",
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vite-plugin-vue-devtools": "^7.0.24",
     "vite-plugin-windicss": "^1.9.3",
     "vite-svg-loader": "^5.1.0",
     "vitepress": "^1.1.0"
