--- a/file/booting/src/main/resources/application.yml
+++ b/file/booting/src/main/resources/application.yml
@@ -12,13 +12,12 @@ spring:
           password: root
   servlet:
     multipart:
-      max-file-size: 99999MB
-      max-request-size: 99999MB
-  redis:
-    host: localhost
-    port: 6379
-    password: 123456
-    database: 0
+      max-file-size: 10GB
+      max-request-size: 10GB
+      enabled: true
+  server:
+    tomcat:
+      max-swallow-size: 10GB #重要的一行，修改tomcat的吞吐
 
 server:
   #端口号
