--- a/server/booting/src/main/resources/application.yml
+++ b/server/booting/src/main/resources/application.yml
@@ -10,6 +10,11 @@ spring:
           driver-class-name: com.mysql.cj.jdbc.Driver
           username: root
           password: root
+        table_schema:
+          url: jdbc:mysql://localhost:3306/information_schema?characterEncoding=utf8&useUnicode=true&useSSL=false&serverTimezone=GMT%2B8
+          driver-class-name: com.mysql.cj.jdbc.Driver
+          username: root
+          password: root
   servlet:
     multipart:
       max-file-size: 99999MB
