--- a/server/web/pom.xml
+++ b/server/web/pom.xml
@@ -9,9 +9,9 @@
         <version>2.7.12</version>
     </parent>
 
-    <artifactId>booting</artifactId>
+    <artifactId>web</artifactId>
     <packaging>jar</packaging>
-    <name>booting</name>
+    <name>web</name>
 
     <dependencies>
         <!-- 引入父模块中声明的依赖-->
@@ -29,37 +29,6 @@
             <groupId>com.example</groupId>
             <artifactId>system</artifactId>
         </dependency>
-
-        <dependency>
-            <groupId>com.example</groupId>
-            <artifactId>job</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.example</groupId>
-            <artifactId>message</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.example</groupId>
-            <artifactId>count</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.example</groupId>
-            <artifactId>web</artifactId>
-        </dependency>
     </dependencies>
-
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.7.12</version>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
