--- a/file/booting/src/main/resources/application.yml
+++ b/file/booting/src/main/resources/application.yml
@@ -6,10 +6,10 @@ spring:
       strict: false
       datasource:
         system:
-          url: jdbc:mysql://localhost:3306/system_file?characterEncoding=utf8&useUnicode=true&useSSL=false&serverTimezone=GMT%2B8
+          url: jdbc:mysql://1.12.248.138:3306/system_file?characterEncoding=utf8&useUnicode=true&useSSL=false&serverTimezone=GMT%2B8
           driver-class-name: com.mysql.cj.jdbc.Driver
           username: root
-          password: root
+          password: 46176qwert
   servlet:
     multipart:
       max-file-size: 10GB
