--- a/server/booting/src/main/resources/application.yml
+++ b/server/booting/src/main/resources/application.yml
@@ -6,21 +6,21 @@ spring:
       strict: false
       datasource:
         system:
-          url: jdbc:mysql://localhost:3306/system_server?characterEncoding=utf8&useUnicode=true&useSSL=false&serverTimezone=GMT%2B8
+          url: jdbc:mysql://1.12.248.138:3306/system_server?characterEncoding=utf8&useUnicode=true&useSSL=false&serverTimezone=GMT%2B8
           driver-class-name: com.mysql.cj.jdbc.Driver
           username: root
-          password: root
+          password: 46176qwert
         table_schema:
-          url: jdbc:mysql://localhost:3306/information_schema?characterEncoding=utf8&useUnicode=true&useSSL=false&serverTimezone=GMT%2B8
+          url: jdbc:mysql://1.12.248.138:3306/information_schema?characterEncoding=utf8&useUnicode=true&useSSL=false&serverTimezone=GMT%2B8
           driver-class-name: com.mysql.cj.jdbc.Driver
           username: root
-          password: root
+          password: 46176qwert
   servlet:
     multipart:
       max-file-size: 99999MB
       max-request-size: 99999MB
   redis:
-    host: 127.0.0.1
+    host: 1.12.248.138
     port: 6379
     password: 123456
     database: 0
