--- a/video/booting/src/main/resources/application.yml
+++ b/video/booting/src/main/resources/application.yml
@@ -6,16 +6,16 @@ spring:
       strict: false
       datasource:
         system:
-          url: jdbc:mysql://localhost:3306/system_video?characterEncoding=utf8&useUnicode=true&useSSL=false&serverTimezone=GMT%2B8
+          url: jdbc:mysql://1.12.248.138:3306/system_video?characterEncoding=utf8&useUnicode=true&useSSL=false&serverTimezone=GMT%2B8
           driver-class-name: com.mysql.cj.jdbc.Driver
           username: root
-          password: root
+          password: 46176qwert
   servlet:
     multipart:
       max-file-size: 9999MB
       max-request-size: 9999MB
   redis:
-    host: localhost
+    host: 1.12.248.138
     port: 6379
     password: 123456
     database: 0
@@ -28,6 +28,3 @@ mybatis-plus:
   mapper-locations: classpath*:/mapper/*.xml # 自定义xml文件路径
   configuration:
     map-underscore-to-camel-case: true #在映射实体类时候,将数据库表名和字段中下划线去掉,按照驼峰命名
-
-file:
-  path: "E:"
